force-app/main/default/objects/Payments__c/fields/Date_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Date_Adjustment__c</fullName>
    <label>Date Adjustment</label>
    <type>Date</type>
</CustomField>