force-app/main/default/objects/Payments__c/fields/Final_Amount__c.field-meta.xml
<CustomField>
    <fullName>Final_Amount__c</fullName>
    <label>Montant Final</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>