force-app/main/default/objects/Payments__c/fields/Other_type__c.field-meta.xml
<CustomField>
    <fullName>Other_type__c</fullName>
    <label>Other type</label>
    <type>TextArea</type>
</CustomField>