force-app/main/default/objects/Payments__c/fields/Proposed_Tarif__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Tarif__c</fullName>
    <label>Tarif proposé</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>