force-app/main/default/objects/Payments__c/fields/Tarif__c.field-meta.xml
<CustomField>
    <fullName>Tarif__c</fullName>
    <label>Tarif</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>