force-app/main/default/objects/Payments__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consultation</fullName>
                <default>true</default>
                <label>Consultation</label>
            </value>
            <value>
                <fullName>Peeling Superficilel</fullName>
            </value>
            <value>
                <fullName>Peeling BPEEL</fullName>
            </value>
            <value>
                <fullName>Peeling moyen</fullName>
            </value>
            <value>
                <fullName>Peeling profond</fullName>
            </value>
            <value>
                <fullName>Vergetures: brazapeel</fullName>
            </value>
            <value>
                <fullName>Needing</fullName>
            </value>
            <value>
                <fullName>Self-regenering</fullName>
            </value>
            <value>
                <fullName>Cryolipolyse</fullName>
            </value>
            <value>
                <fullName>Botox</fullName>
            </value>
            <value>
                <fullName>Acide hyaluronique</fullName>
            </value>
            <value>
                <fullName>Skintinghtening(laser YAG)</fullName>
            </value>
            <value>
                <fullName>Epilation laser petite surface</fullName>
            </value>
            <value>
                <fullName>Epilation laser surface moyenne(demi-jambe)</fullName>
            </value>
            <value>
                <fullName>Epilation laser grande surface(jambe entiere)</fullName>
            </value>
            <value>
                <fullName>Botox pour hyperhydrose (transpiration exessive)</fullName>
            </value>
            <value>
                <fullName>Nettoyage de peau (achnee, pores dilatees)</fullName>
            </value>
            <value>
                <fullName>Fil tenseur (prix par fil)</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>