force-app/main/default/objects/Payments__c/recordTypes/Dermato_Payment_RT.recordType-meta.xml
<RecordType>
    <fullName>Dermato_Payment_RT</fullName>
    <active>true</active>
    <label>Dermato Payment RT</label>
</RecordType>