force-app/main/default/objects/Payments__c/validationRules/Validate_Date_Adjustment.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Date_Adjustment</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT( Adjustment__c )&lt;&gt; &quot;&quot; &amp;&amp; TEXT( Date_Adjustment__c )=&quot;&quot;</errorConditionFormula>
    <errorMessage>Please fill the Date adjustment field.</errorMessage>
</ValidationRule>