force-app/main/default/objects/Payments__c/validationRules/Validate_proposed_tarif_field.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_proposed_tarif_field</fullName>
    <active>true</active>
    <errorConditionFormula>TRIM(Other_type__c)   &lt;&gt; &quot;&quot; &amp;&amp;   TRIM(TEXT( Proposed_Tarif__c ))  = &quot;&quot;</errorConditionFormula>
    <errorMessage>Please enter a custom tarif.</errorMessage>
</ValidationRule>