force-app/main/default/objects/Payments__c/validationRules/Validate_Type_Expense.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Type_Expense</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Type__c , &quot;Others&quot;) &amp;&amp;  TRIM( Other_type__c )   =  &quot;&quot;</errorConditionFormula>
    <errorMessage>Please the custom type.</errorMessage>
</ValidationRule>